better auth, roles, syncing possibility (to be tested)