@@ -2,10 +2,10 @@ package com.example.musicplayerbackend.service;
 
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.CopyOnWriteArraySet;
 
 @Service
 public class PeerTrackingService {
@@ -13,12 +13,13 @@ public class PeerTrackingService {
     private final Map<Integer, Map<String, Set<Integer>>> songChunkRegistry = new ConcurrentHashMap<>();
 
     public void registerPeerChunks(Integer songId, String peerId, Set<Integer> chunkIndices) {
-        songChunkRegistry
-                .computeIfAbsent(songId, k -> new ConcurrentHashMap<>())
-                .merge(peerId, new CopyOnWriteArraySet<>(chunkIndices), (existing, newChunks) -> {
-                    existing.addAll(newChunks);
-                    return existing;
-                });
+        Map<String, Set<Integer>> peerMap = songChunkRegistry
+                .computeIfAbsent(songId, _ -> new ConcurrentHashMap<>());
+
+        Set<Integer> peerChunks = peerMap
+                .computeIfAbsent(peerId, _ -> ConcurrentHashMap.newKeySet());
+
+        peerChunks.addAll(chunkIndices);
     }
 
     public void unregisterPeer(String peerId) {
@@ -27,6 +28,10 @@ public class PeerTrackingService {
     }
 
     public Map<String, Set<Integer>> getPeerBufferMapsForSong(Integer songId) {
-        return songChunkRegistry.getOrDefault(songId, Map.of());
+        Map<String, Set<Integer>> map = songChunkRegistry.get(songId);
+        if (map == null) {
+            return Collections.emptyMap();
+        }
+        return Map.copyOf(map);
     }
 }
